# mcp-qt

./: .gitignore  CMakeLists.txt  MCP_QT_SDK_ROADMAP.md  README.md  test_mcp_server.js
conformance_runner/: ScenarioHandlersBasic.cpp  main.cpp
conformance_runner_qt/: CMakeLists.txt  ScenarioHandlersAuthQt.cpp  conformance-baseline.yml  main_qt.cpp  调试笔记.md
examples/: CMakeLists.txt
examples/anysearch_qt/: main.cpp
examples/context7_qt/: CMakeLists.txt  main.cpp
examples/debugger/: CMakeLists.txt
examples/debugger/include/: AgentController.h  ChatWindow.h  ToolManager.h
examples/debugger/src/: AgentController.cpp  ChatWindow.cpp  ToolManager.cpp  main.cpp
examples/playwright_qt/: CMakeLists.txt  main.cpp
extensions/qt/include/mcp_qt/: QtHttpTransport.h  QtMcpClient.h  QtMcpToolBridge.h  QtStdioTransport.h
extensions/qt/src/: QtHttpTransport.cpp  QtMcpClient.cpp  QtMcpToolBridge.cpp  QtStdioTransport.cpp
mcp_core/: CMakeLists.txt
mcp_core/include/mcp_core/: HttpSseTransport.h  McpClientSession.h  McpOAuthClient.h  McpPrompt.h  McpResource.h  McpTool.h  SubprocessStdioTransport.h  mcp_core.h
mcp_core/src/: HttpSseTransport.cpp  JsonRpcDispatcher.cpp  McpClientSession.cpp  McpOAuthClient.cpp  SubprocessStdioTransport.cpp
mcp_qt/: CMakeLists.txt
mcp_qt/include/mcp_qt/: QtHttpTransport.h
mcp_qt/src/: QtHttpTransport.cpp  test_http_transport.cpp
mcp_qt_client/: CMakeLists.txt
mcp_qt_client/include/mcp_qt_client/: McpPromptsModel.h  McpQtClient.h  McpResourceTemplatesModel.h  McpResourcesModel.h  McpToolsModel.h
mcp_qt_client/src/: McpPromptsModel.cpp  McpQtClient.cpp  McpResourceTemplatesModel.cpp  McpResourcesModel.cpp  McpToolsModel.cpp
mcp_qt_transport/: CMakeLists.txt
mcp_qt_transport/include/mcp_qt_transport/: QtStatelessHttpTransport.h
mcp_qt_transport/src/: QtHttpSseTransport.cpp  QtHttpSseWorker.cpp  QtHttpSseWorker.h  QtStatelessHttpTransport.cpp
scratch/: refactor.py
src/client/src/: McpHost.cpp  McpJsonConfigLoader.cpp  McpQtClient.cpp
tests/: CMakeLists.txt  common.h  main_standalone.cpp
tests/features/: test_new_capabilities.cpp  test_notifications.cpp  test_sampling_roots_oauth.cpp  test_typed_results.cpp
tests_qt/: CMakeLists.txt  main_qt.cpp  test_qt_resource_router.cpp  test_qt_session_integration.cpp  test_qt_stateless_http_transport.cpp  test_qt_tools_model.cpp  test_qt_transport_recovery.cpp
